[tool.poetry]
name = "sdss-drift"
version = "1.2.0"
description = "Modbus PLC control library"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/drift"
repository = "https://github.com/sdss/drift"
documentation = "https://sdss-drift.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "drift", from = "python" }
]

[tool.poetry.dependencies]
python = "^3.8"
sdsstools = "^1.0.0"
pymodbus = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=7.11.0"
doc8 = ">=0.8.0"
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
black = ">=24.1.1"
ruff = ">=0.4.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}
Sphinx = ">=3.5.2"
myst-parser = ">=0.14.0"
furo = ">=2021.6.18-beta.36"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-copybutton = ">=0.3.3"
sphinx-click = ">=2.3.0"
sphinx-jsonschema = ">=1.16.8"

[tool.black]
line-length = 88
target-version = ['py312']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["drift"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools"]

[tool.pytest.ini_options]
addopts = "--cov drift --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "class CaseInsensitiveDict",
    "def __repr__",
    "pragma: no cover"
]

[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"
